test basic database interaction in eventlist plugin

--- a/plugins/camsexton/eventlist/plugin.yaml
+++ b/plugins/camsexton/eventlist/plugin.yaml
@@ -4,3 +4,8 @@ plugin:
     author: 'Cam Sexton'
     icon: oc-icon-calendar
     homepage: ''
+navigation:
+    main-menu-item:
+        label: Events
+        url: /camsexton/eventlist/events
+        icon: icon-life-ring
