--- a/plugins/camsexton/events/plugin.yaml
+++ b/plugins/camsexton/events/plugin.yaml
@@ -16,5 +16,5 @@ navigation:
                 icon: icon-calendar
             side-menu-item2:
                 label: Events
-                url: camsexton/events/eventlist
+                url: camsexton/events/events
                 icon: icon-sitemap
